tests/errors/test-error-004.slax
version 1.0

var $test = 4;
